<resources>
    <string name="app_name">Don\'t ruin your laundry</string>
    <string name="symbol_guide">Гид по символам</string>
    <string name="change_the_user">Change the user</string>
    <string name="help_with_app">Как пользоваться приложением</string>
    <string name="helper_text">Вот так и вот так!</string>
    <string name="ok_button">Все понятно</string>
    <string name="select_type">Выбери вид вещи</string>
    <string name="clothing">Одежда</string>
    <string name="bed_sheets">Постельное белье</string>
    <string name="kitchen_stuf">Вещи из кухни</string>
    <string name="bath_stuf">Вещи из ванной</string>
    <string name="the_rest">Остальное</string>
    <string name="name_of_cloth">Название вещи</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_thing">Добавить новую вещь</string>
    <string name="delete">Удалить</string>
    <string name="safe">Сохранить</string>
    <string name="washing">Стирка</string>
    <string name="wash_normal">Машинная стирка, нормальный режим.</string>
    <string name="wash_no">Стирка запрещена</string>
    <string name="save">Сохранить</string>
    <string name="delete_card">Удалить карточку</string>
    <string name="add">Добавить</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="ask_about_how_to_add_photo">Откуда берем фото?</string>
    <string name="from_gallery">Из галерии</string>
    <string name="from_camera">С помощью камеры</string>
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="delete_question">Вы уверены, что хотите полностью удалить карточку?</string>
    <string name="delete_symbol">Удалить символ?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="search_by_name">Поиск по названию</string>
    <string name="LookFor">Искать</string>
    <string name="cloth">Одежда</string>
    <string name="category">Категории</string>
    <string name="edit_fragment">Редактирование карточки</string>
    <string name="add_card_fragment">Добавление новой карточки</string>
    <string name="add_more_symbols">Добавить символы для стирки</string>
    <string name="wash">Разрешена машинная стирка</string>
    <string name="wash_not_allowed">Машинная и ручная стирка запрещены. Разрешена химчистка</string>
    <string name="wash_hand">Ручная стирка при температуре воды до 40 °C. Не тереть, отжимать аккуратно, без перекручивания</string>
    <string name="wash_hand30">Ручная стирка при температуре воды до 30 °C, не тереть, отжимать деликатно</string>
    <string name="wash_hand40">Ручная стирка при температуре воды до 40 °C, не тереть, отжимать деликатно</string>
    <string name="wash30">Ручная или машинная стирка при температуре воды не выше 30°C. Не подвергать сильному отжиму</string>
    <string name="wash40">Ручная или машинная стирка при температуре воды не выше 40°C</string>
    <string name="wash50">Ручная или машинная стирка при температуре воды не выше 50°C</string>
    <string name="wash60">Ручная или машинная стирка при температуре воды не выше 60°</string>
    <string name="wash70">Ручная или машинная стирка при температуре воды не выше 70°C</string>
    <string name="wash90">Ручная или машинная стирка при температуре воды не выше 95°C</string>
    <string name="wash30_care">Деликатная ручная или машинная стирка при температуре воды до 30 °C, с использованием программ деликатной стирки (полоскание при низкой температуре и короткое время отжима)</string>
    <string name="wash30_extracare">Особо деликатная ручная или машинная стирка при температуре воды до 30°C. Не отжимать руками</string>
    <string name="wash40_care">Деликатная ручная или машинная стирка при температуре воды не выше 40°C</string>
    <string name="wash40_extracare">Особо деликатная стирка при температуре воды не выше 40°C</string>
    <string name="wash50_care">Деликатная ручная или машинная стирка при температуре до 50°C</string>
    <string name="wash60_care">Деликатная ручная или машинная стирка при температуре воды до 60 °C</string>
    <string name="wash90_care">Деликатная ручная или машинная стирка при температуре воды до 95 °C</string>
    <string name="wash30_dot">Ручная или машинная стирка при температуре воды не выше 30°C. Не подвергать сильному отжиму</string>
    <string name="wash40_dot">Ручная или машинная стирка при температуре воды не выше 40°C</string>
    <string name="wash50_dot">Ручная или машинная стирка при температуре воды не выше 50°C</string>
    <string name="wash60_dot">Ручная или машинная стирка при температуре воды не выше 60°C</string>
    <string name="wash70_dot">Ручная или машинная стирка при температуре воды не выше 70°C</string>
    <string name="wash90_dot">Ручная или машинная стирка при температуре воды не выше 95°C</string>
    <string name="wash30_dotcare">Деликатная ручная или машинная стирка при температуре воды до 30°C. Не подвергать сильной механической обработке, отжим ослабленный</string>
    <string name="wash30_dot_extracare">Особо деликатная стирка при температуре воды до 30°C. Не отжимать руками</string>
    <string name="wash40_dotcare">Деликатная ручная или машинная стирка при температуре воды до 40 °C</string>
    <string name="wash40_dot_extracare">Особо деликатная стирка при температуре воды до 40°C. Не отжимать руками</string>
    <string name="wash50_dotcare">Деликатная ручная или машинная стирка при начальной температуре воды не выше 50°C</string>
    <string name="wash60_dotcare">Деликатная ручная или машинная стирка при температуре воды не более 60°C</string>
    <string name="wash90_dotcare">Деликатная ручная или машинная стирка при температуре воды не выше 95°C</string>
    <string name="bleach">Отбеливание разрешено любыми окисляющими средствами</string>
    <string name="bleach_non_chlor">Отбеливание разрешено только кислородсодержащими отбеливателями, в составе которых отсутствует хлор</string>
    <string name="bleach_not_allowed">Отбеливание запрещено. Стиральные порошки не должны содержать хлор</string>
    <string name="dry">Разрешено отжимать и сушить в стиральной машине или в сушилке</string>
    <string name="dry40">Сушка и отжим при низкой температуре не выше 40°C</string>
    <string name="dry60">Сушка и отжим при средней температуре не выше 60°C</string>
    <string name="dry80">Сушка и отжим при высокой температуре не выше 80°C</string>
    <string name="dry_no_heat">Обычная барабанная сушка и отжим при нормальной температуре, без нагрева воздуха</string>
    <string name="dry40_care">Деликатная сушка и отжим в сушильном барабане при температуре не выше 40°C</string>
    <string name="dry40_extracare">Особо деликатная сушка и отжим в сушильном барабане при температуре не выше 40°C</string>
    <string name="dry60_care">Деликатная сушка и отжим при температуре не выше 60°C</string>
    <string name="dry_line">После отжима разрешена сушка в подвешенном(вертикальном) состоянии</string>
    <string name="dry_shade">Сушка в тени, вдали от прямых солнечных лучей</string>
    <string name="dry_line_shade">Сушка в подвешенном (вертикальном) состоянии в тени и вдали от прямых солнечных лучей</string>
    <string name="dry_drip">Сушка без отжима в подвешенном (вертикальном) состоянии</string>
    <string name="dry_drip_shade">Сушка без отжима в подвешенном (вертикальном) состоянии в тени, вдали от прямых солнечных лучей</string>
    <string name="dry_flat">Сушка на горизонтальной поверхности в расправленном состоянии</string>
    <string name="dry_flat_shade">Сушка на горизонтальной поверхности в расправленном состоянии в тени</string>
    <string name="dry_not_alloder">Запрещено отжимать и сушить в машинке</string>
    <string name="iron">Для восстановления формы и внешнего вида изделия его разрешено гладить при любой температуре, с паром или без</string>
    <string name="iron110">Разрешено гладить при максимальной температуре 110°C (соответствует символу в виде одной точки на терморегуляторе утюга), допустимо для синтетики, нейлона, акрила, полиэстера, полиамида, ацетата; использовать тканевую прокладку, не пользоваться паром</string>
    <string name="iron150">Разрешено гладить при максимальной температуре 150°C (соответствует символу в виде двух точек на терморегуляторе утюга), допустимо для шерсти и смешанных волокон с полиэстером и вискозой; использовать влажную ткань</string>
    <string name="iron200">Разрешено гладить при максимальной температуре 200°C (соответствует символу в виде трёх точек на терморегуляторе утюга), допустимо для льна и хлопка; можно слегка увлажнить изделие</string>
    <string name="iron_not_allowed">Глажение с паром навредит одежде, рекомендовано регулярное глажение в указанном температурном режиме</string>
    <string name="iron_steam_not_allowed">Изделие не должно подвергаться глажению, пропаривание и обработку паром не применять</string>
    <string name="dry_cleana">Сухая чистка с любым органическим растворителем</string>
    <string name="dry_cleanp">Обычная сухая чистка с использованием тетрахлорэтилена и всех растворителей, перечисленных для символа «F»</string>
    <string name="dry_cleanp2">Деликатная химчистка при ограниченном добавлении воды с осторожным применением растворителей, указанных для символа «P», а также контроле за механическим воздействием и температуре сушки, чистка-самообслуживание запрещена</string>
    <string name="dry_cleanf">Обычная сухая чистка с использованием только углеводорода, бензина и трифтортрихорметана</string>
    <string name="dry_cleanf2">Деликатная химчистка при ограниченном добавлении воды с осторожным применением растворителей, указанных для символа «F», а также контроле за механическим воздействием и температуре сушки, чистка-самообслуживание запрещена</string>
    <string name="dry_cleanw">Обычный режим аквачистки и сушки в соответствии с IEC 456</string>
    <string name="dry_cleanw2">Деликатный режим аквачистки с ограничениями по механическому режиму и режиму сушки с учётом особенностей изделия, относительная усадка — 50+5%</string>
    <string name="dry_cleanw3">Очень деликатный режим аквачистки с ограничениями по механическому режиму и режиму сушки с учётом особенностей изделия, относительная усадка — 25+2,5%</string>
    <string name="dry_clean_short">Одежда может быть очищена в сокращенном цикле. Символ может использоваться в сочетании с буквой</string>
    <string name="dry_clean_lowheat">Одежда может быть очищена в умеренном температурном режиме. Символ может использоваться в сочетании с буквой</string>
    <string name="dry_clean_low_water">При чистке допустима пониженная влажность. Символ может использоваться в сочетании с буквой</string>
    <string name="dry_clean_no_steam">Запрещено использовать пар на завершающей стадии чистки. Символ может использоваться в сочетании с буквой</string>
    <string name="dry_clean_not_allowed">Изделие не должно подвергаться химической чистке, удаление пятен растворителем запрещено</string>
    <string name="dry_clean_wet_not_allowed">Мокрая чистка запрещена</string>
    <string name="wringing">Нельзя выкручивать изделие при отжиме</string>
    <string name="allowed">Разрешена</string>
    <string name="allowed1">Разрешено</string>
    <string name="not_allowed">Запрещена</string>
    <string name="not_allowed1">Запрещено</string>
    <string name="only_hand">Только ручная</string>
    <string name="thirty">30</string>
    <string name="fourty">40</string>
    <string name="fifty">50</string>
    <string name="sixty">60</string>
    <string name="seventy">70</string>
    <string name="nintyfive">95</string>
    <string name="washing_machine_allowed">Разрешена в стиральной машине</string>
    <string name="title_washing">Стирка</string>
    <string name="title_drying">Сушка в сушильной машине</string>
</resources>