<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.AddNewCardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name_of_cloth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/name_of_cloth"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_image"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_card"
            tools:text="Название одежды" />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/lilac_200"
            app:layout_constraintEnd_toStartOf="@id/name_of_cloth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_card">

        </ImageView>



        <TextView
            android:id="@+id/text_on_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_photo"
            app:layout_constraintBottom_toBottomOf="@id/item_image"
            app:layout_constraintEnd_toEndOf="@+id/item_image"
            app:layout_constraintStart_toStartOf="@id/item_image"
            app:layout_constraintTop_toTopOf="@id/item_image">

        </TextView>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin = "8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_image">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_symbols_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="3"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <FrameLayout
                android:id="@+id/add_more_symbol_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"

                android:background="@color/lilac_500"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/symbol_meaning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/add_more_symbols"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/add_symbol_button"
                        />

                    <ImageView
                        android:id="@+id/add_symbol_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/lilac_500"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_add"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/symbol_meaning"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_card"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/lilac_500"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


